# SecurityApp

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/atomone/securityapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/atomone/securityapp/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/atomone/securityapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
securityinspect/: CMakeLists.txt  build.gradle
securityinspect/src/androidTest/java/com/atomone/Secureinspect/: ExampleInstrumentedTest.java
securityinspect/src/main/: AndroidManifest.xml
securityinspect/src/main/cpp/: Analysis.cpp  Analysis.h  DeviceInfo.cpp  DeviceInfo.h  InjectDetected.cpp  MultiOpenDetected.cpp  MultiOpenDetected.h  PkgSign.cpp  PkgSign.h  SecureApi.cpp  SecureApi.h  SimulatorDetected.cpp  SimulatorDetected.h  Syscalls.cpp  Syscalls.h  Util.cpp  Util.h  VaDetected.cpp  VaDetected.h  logUtil.h  sha1.cpp  sha1.h
securityinspect/src/main/java/com/atomone/Secureinspect/: SecureApi.java  SecureException.java  SecureSDK.java
securityinspect/src/main/java/com/atomone/Secureinspect/listener/: IVerifyListener.java
securityinspect/src/main/java/com/atomone/Secureinspect/utils/: ShellUtils.java
securityinspect/src/main/res/values/: strings.xml
securityinspect/src/test/java/com/atomone/Secureinspect/: ExampleUnitTest.java
